--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>util-vue-core</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="build.js"></script>
+    <script src="/dist/build.js"></script>
   </body>
 </html>
